--- a/acoms-front/aluno/aluno.css
+++ b/acoms-front/aluno/aluno.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.cdnfonts.com/css/oleo-script');
+
 body {
   font-family: "Karla", sans-serif;
   background: linear-gradient(to right, #0c8fd5, #54C9FF); 
@@ -6,6 +8,7 @@ body {
 
   .brand-wrapper .logo {
   height: 150px;
+  margin-bottom: 50px;
   
 
   /* margin-left: 30%;
@@ -27,10 +30,34 @@ body {
   overflow: hidden; }
   .login-card-img {
     border-radius: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    margin-top: 20%;
+    margin-left: 15%;
+    width: 90%;
+    height: 90%;
     }
+
+    .texto{
+position: absolute;
+margin-left: 20%;
+margin-top: 15%;
+font-family: 'Oleo Script', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 35px;
+line-height: 66px;
+color: #0C90D5;
+    }
+.retangulo{
+      position: absolute;
+      margin-top: 2%;
+      left: 49%;
+      height: 670px;
+      width: 8px;
+    background: linear-gradient(180deg, #54C9FF 0%, #0C90D5 100%);
+  
+    transform: rotate(-180deg);
+  
+  }
 
   .login-card .card-body {
     margin-left: 100px;
@@ -44,10 +71,12 @@ body {
     font-weight: normal;
     margin-bottom: 23px; }
   .login-card form {
-    margin-left: 50px;
+    margin-bottom: 10%;
+    margin-left: 15%;
     width: 70%;
     max-width: 100%; }
   .login-card .form-control {
+    border-radius: 10px;
     border: 2px solid #0c8fd5;
     padding: 15px 25px;
     margin-bottom: 20px;
@@ -87,6 +116,35 @@ body {
           opacity: 0.5;
           pointer-events: none;
       }
+      .select_arrow {
+        position: absolute;
+        margin-top: -57px;
+        margin-left: 37%;
+        pointer-events: none;
+        border-style: solid;
+        border-width: 20px 10px 0px 10px;
+        border-color: #0c90d5 transparent transparent transparent;
+    }
+    .select select:hover ~ .select_arrow,
+    .select select:focus ~ .select_arrow {
+        border-top-color: #0c90d5;
+    }
+    .select select:disabled ~ .select_arrow {
+        border-top-color: #0c90d5;
+    }
+
+    .checkbox:checked {
+      left: calc(100% - 19px - 3px);
+    }
+    
+.checkbox{
+      width: calc(25px - 6px);
+      height: calc(25px - 6px);
+      border-radius: 50%;
+      left: 3px;
+      top: 3px;
+      background-color: #fff;
+    }
 
 
   .login-card .login-btn {
