--- a/acoms/paginas/login/login_aluno/loginaluno.css
+++ b/acoms/paginas/login/login_aluno/loginaluno.css
@@ -2,7 +2,7 @@ img{
 	width: 100%;
 }
 .login {
-    height: 1000px;
+    height: 100vh;
     width: 100%;
     background: radial-gradient(#1B66B2, #0C90D5);
     position: relative;
