--- a/acoms/paginas/login/login_professor/loginprofessor.css
+++ b/acoms/paginas/login/login_professor/loginprofessor.css
@@ -1,106 +1,119 @@
-img{
-	width: 100%;
+img {
+  width: 100%;
 }
+
 .login {
-    height: 1000px;
-    width: 100%;
-    background: radial-gradient(#1B66B2, #0C90D5);
-    position: relative;
+  height: 100vh;
+  width: 100%;
+  background: radial-gradient(#1B66B2, #0C90D5);
+  position: relative;
 }
+
 .login_box {
-    width: 1050px;
-    height: 600px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 1px 4px 22px -8px #1B66B2;
-    display: flex;
-    overflow: hidden;
+  width: 1050px;
+  height: 600px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 1px 4px 22px -8px #1B66B2;
+  display: flex;
+  overflow: hidden;
 }
-.login_box .left{
+
+.login_box .left {
   width: 41%;
   height: 100%;
   padding: 25px 25px;
-  
+
 }
-.login_box .right{
+
+.login_box .right {
   width: 59%;
-  height: 100%  
+  height: 100%
 }
+
 .left .top_link a {
-    color: #1B66B2;
-    font-weight: 400;
+  color: #1B66B2;
+  font-weight: 400;
 }
-.left .top_link{
+
+.left .top_link {
   height: 20px
 }
-.left .contact{
-	display: flex;
-    align-items: center;
-    justify-content: center;
-    align-self: center;
-    height: 100%;
-    width: 73%;
-    margin: auto;
+
+.left .contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  height: 100%;
+  width: 73%;
+  margin: auto;
 }
-.left h3{
+
+.left h3 {
   text-align: center;
   margin-bottom: 40px;
 }
+
 .left input {
-    border: none;
-    width: 80%;
-    margin: 15px 0px;
-    border-bottom: 2px solid #1B66B2;
-    padding: 7px 9px;
-    width: 100%;
-    overflow: hidden;
-    background: transparent;
-    font-weight: 600;
-    font-size: 14px;
+  border: none;
+  width: 80%;
+  margin: 15px 0px;
+  border-bottom: 2px solid #1B66B2;
+  padding: 7px 9px;
+  width: 100%;
+  overflow: hidden;
+  background: transparent;
+  font-weight: 600;
+  font-size: 14px;
 }
-.left{
-	background: linear-gradient(-45deg, #dcd7e0, #fff);
+
+.left {
+  background: linear-gradient(-45deg, #dcd7e0, #fff);
 }
+
 .submit {
-    border: none;
-    padding: 15px 70px;
-    border-radius: 8px;
-    display: block;
-    margin: auto;
-    margin-top: 120px;
-    background: linear-gradient(#0C90D5, #40aadb);
-    color: #fff;
-    font-weight: bold;
-    -webkit-box-shadow: 0px 9px 15px -11px #0C90D5;
-    -moz-box-shadow: 0px 9px 15px -11px #0C90D5;
-    box-shadow: 0px 9px 15px -11px #54C9FF;
+  border: none;
+  padding: 15px 70px;
+  border-radius: 8px;
+  display: block;
+  margin: auto;
+  margin-top: 120px;
+  background: linear-gradient(#0C90D5, #40aadb);
+  color: #fff;
+  font-weight: bold;
+  -webkit-box-shadow: 0px 9px 15px -11px #0C90D5;
+  -moz-box-shadow: 0px 9px 15px -11px #0C90D5;
+  box-shadow: 0px 9px 15px -11px #54C9FF;
 }
 
 
 
 .right {
-	background: linear-gradient(212.38deg, rgba(84, 201, 255, 0.7) 0%, rgba(27, 102, 178, 0.71) 100%),url(https://apicms.thestar.com.my/uploads/images/2022/05/15/1585587.jpg) center;
-	color: #fff;
-	position: relative;
+  background: linear-gradient(212.38deg, rgba(84, 201, 255, 0.7) 0%, rgba(27, 102, 178, 0.71) 100%), url(https://apicms.thestar.com.my/uploads/images/2022/05/15/1585587.jpg) center;
+  color: #fff;
+  position: relative;
 }
 
-.right .right-text{
+.right .right-text {
   height: 100%;
   position: relative;
   transform: translate(0%, 45%);
 }
-.right-text h2{
+
+.right-text h2 {
   display: block;
   width: 100%;
   text-align: center;
   font-size: 50px;
   font-weight: 500;
 }
-.right-text h5{
+
+.right-text h5 {
   display: block;
   width: 100%;
   text-align: center;
@@ -108,7 +121,7 @@ img{
   font-weight: 400;
 }
 
-.right .right-inductor{
+.right .right-inductor {
   position: absolute;
   width: 70px;
   height: 7px;
@@ -117,11 +130,9 @@ img{
   bottom: 70px;
   transform: translate(-50%, 0%);
 }
+
 .top_link img {
-    width: 28px;
-    padding-right: 7px;
-    margin-top: -3px;
+  width: 28px;
+  padding-right: 7px;
+  margin-top: -3px;
 }
-
-
-
