--- a/acoms/paginas/login-select/loginpage.css
+++ b/acoms/paginas/login-select/loginpage.css
@@ -16,7 +16,7 @@ body{
 h1{
   /*position: absolute;*/
   text-align: center;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   color:#ffffff;
   font-family:'Poppins';
   font-weight: bolder;
