--- a/acoms/paginas/chat/chatresponsavelcoordenacao.css
+++ b/acoms/paginas/chat/chatresponsavelcoordenacao.css
@@ -48,3 +48,12 @@
     padding: 10px 10px 0px 10px;
     height: 580px;
 }
+
+#contato {
+    margin-top: 10px;
+    padding: 10px 10px 0px 10px;
+}
+
+#visualizar {
+    margin-right: 10px;
+}
