--- a/acoms/paginas/boletim/boletim.css
+++ b/acoms/paginas/boletim/boletim.css
@@ -1,22 +1,14 @@
-
-
-body{
-    margin-top:20px;
-    color: #1a202c;
-    text-align: left;
-    background-color: #e2e8f0;
-        
-}
-#body{
+#body {
     background-image: linear-gradient(to right, #294091, #089bdf);
 }
 
 .main-body {
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
 }
+
 .card {
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-    
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
+
 }
 
 .card {
@@ -27,89 +19,32 @@ body{
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
-    border: 0 solid rgba(0,0,0,.125);
+    border: 0 solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
-
 }
 
 .card-body {
     flex: 1 1 auto;
     min-height: 1px;
     padding: 1rem;
-    height: 650px;
-    background-color: rgba(255, 255, 255, 0.6);
+    height: 600px;
 }
 
-.gutters-sm {
-    margin-right: -8px;
-    margin-left: -8px;
+.gutters-sm>[class*=col-md-4] {
+    padding-left: 10px;
+    padding-right: 20px;
 }
 
-h1{
-margin-left: 19%;
-}
-
-
-
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
-    padding-right: 8px;
-    padding-left: 8px;
-}
-.mb-3, .my-3 {
-    margin-bottom: 1rem!important;
-}
-
-.bg-gray-300 {
-    background-color: #e2e8f0;
-
-}
-.h-100 {
-    height: 100%!important;
-}
-.shadow-none {
-    box-shadow: none!important;
-}
-
-
-
-#div01{
-    height: 1000px;
+.col-md-8 {
     background-color: white;
-}
-
-.col-md-8{
-    background-color:white;
     background-color: rgba(255, 255, 255, 0.6);
-    height: 650px;
+    border-radius: 5px;
+    height: 600px;
+    right: 10px;
 }
 
-#botao{
-    position: relative;
-}
-
-/*nav*/
-
-nav{
-    height: 120px;
-    background-color:white;
-    background-color: rgba(255, 255, 255, 0.6);
-    
-    
-}
-
-#visualizar{
-    margin-right: 10px;
-    margin-top: px;
-}
-
-#div-informacao{
-    
+#div-informacao {
     margin-top: 10px;
     padding: 10px 10px 0px 10px;
-    height: 630px;
-}
-
-#sair{
-    padding: 5px 30px 5px 30px;
-    font-size: 20px;
+    height: 580px;
 }
