--- a/acoms/paginas/login/login_coordenacao/logincoordenador.css
+++ b/acoms/paginas/login/login_coordenacao/logincoordenador.css
@@ -1,11 +1,13 @@
+body{
+  background: radial-gradient(#1B66B2, #0C90D5);
+  width: 100%;
+}
+
 img{
 	width: 100%;
 }
 .login {
-  height: 100vh;
-    width: 100%;
-    background: radial-gradient(#1B66B2, #0C90D5);
-    position: relative;
+    height: 1px;
 }
 .login_box {
     width: 1050px;
@@ -16,7 +18,7 @@ img{
     transform: translate(-50%,-50%);
     background: #fff;
     border-radius: 10px;
-    box-shadow: 1px 4px 22px -8px #1B66B2;
+    box-shadow: 1px 4px 22px -8px black;
     display: flex;
     overflow: hidden;
 }
