--- a/acoms/paginas/login/login_responsavel/loginresponsavel.css
+++ b/acoms/paginas/login/login_responsavel/loginresponsavel.css
@@ -1,11 +1,13 @@
+body{
+  background: radial-gradient(#1B66B2, #0C90D5);
+  width: 100%;
+}
+
 img{
 	width: 100%;
 }
 .login {
-    height: 100vh;
-    width: 100%;
-    background: radial-gradient(#1B66B2, #0C90D5);
-    position: relative;
+    height: 1px;
 }
 .login_box {
     width: 1050px;
